--- a/storepoints-portlet/pom.xml
+++ b/storepoints-portlet/pom.xml
@@ -298,12 +298,12 @@
 			<version>3.2-FINAL</version>
 		</dependency>
 
-        		<!-- alfresco -->
+        		<!-- alfresco
 		<dependency>
 			<groupId>alfresco</groupId>
 			<artifactId>alfresco-web-service-client</artifactId>
 			<version>3.3</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
@@ -318,11 +318,6 @@
 			<groupId>xfire</groupId>
 			<artifactId>wsdl4j</artifactId>
 			<version>1.5.2</version>
-		</dependency>
-		<dependency>
-			<groupId>alfresco</groupId>
-			<artifactId>alfresco-web-service-client</artifactId>
-			<version>3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-discovery</groupId>
